--- a/aws/projects/001-roman-numerals-converter/Converter_Template.yml
+++ b/aws/projects/001-roman-numerals-converter/Converter_Template.yml
@@ -5,7 +5,6 @@ Parameters:
   ConverterKey:
     Description: Key files parameters
     Type: "AWS::EC2::KeyPair::KeyName"
-    Default: 
 
 Resources:
  ConverterSecGr:
@@ -27,8 +26,8 @@ Resources:
   Properties:
     ImageId: ami-0c94855ba95c71c99
     InstanceType: t2.micro
-    KeyName: !Ref "ConverterKey"
-    SecurityGroups:
+    KeyName: !Ref ConverterKey
+    SecurityGroups: 
     - Ref: ConverterSecGr
     Tags:
      - Key: "Name"
@@ -39,16 +38,25 @@ Resources:
     UserData:
         'Fn::Base64': 
           !Sub |
- 
+           #!/bin/bash
+           
+           yum update -y
+
+           yum install Python3 -y
+
+           pip3 install flask
 
            #getting index.html, result.html, converter_app.py
            
+           mkdir templates
+           cd templates 
+           sudo wget https://raw.githubusercontent.com/charliefalcon/aws-devops-workshop/master/aws/projects/001-roman-numerals-converter/templates/index.html
+           sudo wget https://raw.githubusercontent.com/charliefalcon/aws-devops-workshop/master/aws/projects/001-roman-numerals-converter/templates/result.html
            
-           cd /var/www/html 
-           sudo wget https://raw.githubusercontent.com/charliefalcon/aws-devops-workshop/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/index.html
-           sudo wget https://raw.githubusercontent.com/charliefalcon/aws-devops-workshop/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/cat0.jpg
-           sudo wget https://raw.githubusercontent.com/charliefalcon/aws-devops-workshop/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/cat1.jpg
-           sudo wget https://raw.githubusercontent.com/charliefalcon/aws-devops-workshop/master/aws/projects/101-kittens-carousel-static-website-ec2/static-web/cat2.jpg
+           cd ..
+           sudo wget https://raw.githubusercontent.com/charliefalcon/aws-devops-workshop/master/aws/projects/001-roman-numerals-converter/converter_app.py
+
+           Python3 converter_app.py
 Outputs:
   PublicDNS:
     Description: Public DNS Name of the EC2 instance
