--- a/aws/projects/001-roman-numerals-converter/Converter_Template.yml
+++ b/aws/projects/001-roman-numerals-converter/Converter_Template.yml
@@ -1,5 +1,13 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: AWS CloudFormation template runs appache server and displays a static webpage on a single EC2 instance.
+
+Description: The Roman Numerals Converter Application aims to convert the given number to the Roman numerals. 
+The application is to be coded in Python and deployed as a web application with Flask on AWS Elastic Compute 
+Cloud (EC2) Instance using AWS Cloudformation Service. The application stack; is created with new AWS resources, 
+takes the name of the Key Pair as a parameter from the user, runs on Amazon Linux 2 EC2 Instance. EC2 Instance type 
+is configured as `t2.micro`. Instance launched by Cloudformation should be tagged `Web Server of StackName` 
+The Web Application is accessible via web browser and terminal from anywhere. The Application files are downloaded 
+from Github repo and deployed on EC2 Instance using user data script within cloudformation template. Roman Numerals 
+Converter Application Website URL is given as output by Cloudformation Service, after the stack created.
 
 Parameters:
   ConverterKey:
@@ -11,7 +19,7 @@ Resources:
   Type: "AWS::EC2::SecurityGroup"
   Properties:
     GroupDescription: Allows SSH and HTTP #required
-    GroupName: Kittens_Sec_Group
+    GroupName: Coverter_Sec_Group
     SecurityGroupIngress:
     - IpProtocol: tcp
       FromPort: "80"
@@ -31,10 +39,7 @@ Resources:
     - Ref: ConverterSecGr
     Tags:
      - Key: "Name"
-       Value: !Join
-         - " "
-         - - "Web Server of"
-           - !Ref "AWS::StackName"
+       Value: !Join [ " ", ["Web Server of", !Ref "AWS::StackName" ] ]
     UserData:
         'Fn::Base64': 
           !Sub |
@@ -42,7 +47,7 @@ Resources:
            
            yum update -y
 
-           yum install Python3 -y
+           yum install python3 -y
 
            pip3 install flask
 
@@ -56,11 +61,9 @@ Resources:
            cd ..
            sudo wget https://raw.githubusercontent.com/charliefalcon/aws-devops-workshop/master/aws/projects/001-roman-numerals-converter/converter_app.py
 
-           Python3 converter_app.py
+           python3 converter_app.py
+
 Outputs:
   PublicDNS:
     Description: Public DNS Name of the EC2 instance
-    Value: !Join 
-      - "://"
-      - - "http"
-        - !GetAtt WebServerInstance.PublicDnsName
+    Value: !Join [ "://", [ "http", !GetAtt WebServerInstance.PublicDnsName ] ]
