--- a/aws/projects/001-roman-numerals-converter/Converter_Template.yml
+++ b/aws/projects/001-roman-numerals-converter/Converter_Template.yml
@@ -1,7 +1,7 @@
 AWSTemplateFormatVersion: 2010-09-09
 
 Description: The Roman Numerals Converter Application aims to convert the given number to the Roman numerals. 
-The application is to be coded in Python and deployed as a web application with Flask on AWS Elastic Compute 
+The application coded in Python and deployed as a web application with Flask on AWS Elastic Compute 
 Cloud (EC2) Instance using AWS Cloudformation Service. The application stack; is created with new AWS resources, 
 takes the name of the Key Pair as a parameter from the user, runs on Amazon Linux 2 EC2 Instance. EC2 Instance type 
 is configured as `t2.micro`. Instance launched by Cloudformation should be tagged `Web Server of StackName` 
