--- a/aws/projects/001-roman-numerals-converter/Converter_Template.yml
+++ b/aws/projects/001-roman-numerals-converter/Converter_Template.yml
@@ -1,13 +1,13 @@
 AWSTemplateFormatVersion: 2010-09-09
 
 Description: The Roman Numerals Converter Application aims to convert the given number to the Roman numerals. 
-The application coded in Python and deployed as a web application with Flask on AWS Elastic Compute 
-Cloud (EC2) Instance using AWS Cloudformation Service. The application stack; is created with new AWS resources, 
-takes the name of the Key Pair as a parameter from the user, runs on Amazon Linux 2 EC2 Instance. EC2 Instance type 
-is configured as `t2.micro`. Instance launched by Cloudformation should be tagged `Web Server of StackName` 
-The Web Application is accessible via web browser and terminal from anywhere. The Application files are downloaded 
-from Github repo and deployed on EC2 Instance using user data script within cloudformation template. Roman Numerals 
-Converter Application Website URL is given as output by Cloudformation Service, after the stack created.
+ The application coded in Python and deployed as a web application with Flask on AWS Elastic Compute 
+ Cloud (EC2) Instance using AWS Cloudformation Service. The application stack; is created with new AWS resources, 
+ takes the name of the Key Pair as a parameter from the user, runs on Amazon Linux 2 EC2 Instance. EC2 Instance type 
+ is configured as `t2.micro`. Instance launched by Cloudformation should be tagged `Web Server of StackName` 
+ The Web Application is accessible via web browser and terminal from anywhere. The Application files are downloaded 
+ from Github repo and deployed on EC2 Instance using user data script within cloudformation template. Roman Numerals 
+ Converter Application Website URL is given as output by Cloudformation Service, after the stack created.
 
 Parameters:
   ConverterKey:
@@ -35,8 +35,8 @@ Resources:
     ImageId: ami-0c94855ba95c71c99
     InstanceType: t2.micro
     KeyName: !Ref ConverterKey
-    SecurityGroups: 
-    - Ref: ConverterSecGr
+    SecurityGroupIds:
+      - !Ref ConverterSecGr
     Tags:
      - Key: "Name"
        Value: !Join [ " ", ["Web Server of", !Ref "AWS::StackName" ] ]
@@ -64,6 +64,9 @@ Resources:
            python3 converter_app.py
 
 Outputs:
-  PublicDNS:
-    Description: Public DNS Name of the EC2 instance
+  WebSiteURL:
+    Description: URL for application
     Value: !Join [ "://", [ "http", !GetAtt WebServerInstance.PublicDnsName ] ]
+
+
+    
