--- a/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql/api-bookstore/docker-compose.yaml
+++ b/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql/api-bookstore/docker-compose.yaml
@@ -2,32 +2,41 @@ version: "3.8"
 
 services:
   database:
-    image: mysql:mysql-5.7
+    image: mysql
     restart: always
-    volumes:
-      - data:var/lib/mysql
+    # volumes:
+    #  - data:var/lib/mysql
     environment:
-      MYSQL_DATABASE_HOST:  database
       MYSQL_DATABASE_USER:  clarusway
       MYSQL_DATABASE_PASSWORD: Clarusway_1
-      MYSQL_DATABASE_DB:  bookstore_db
-      MYSQL_DATABASE_PORT:  3306
+      MYSQL_DATABASE_DB:  "bookstore_db"
+      # MYSQL_DATABASE_PORT:  "3306"
+    ports:
+      # <Port exposed> : < MySQL Port running inside container>
+      - '3306:3306'
+    expose:
+      # Opens port 3306 on the container
+      - '3306'
+      # Where our data will be persisted
+    volumes:
+      - my-db:/var/lib/mysql
     networks:
       - bookstorenet
   bookstore-api:
-    image:
+    build: .
     depends_on:
       - database
     restart: always
     ports:
       - "80:80"
     environment:
+      MYSQL_DATABASE_HOST:  database
+
     networks:
       - bookstorenet
 
 volumes:
-  data:
-
+  my-db:
 
 networks:
   bookstorenet:
