--- a/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql/api-bookstore/docker-compose.yml
+++ b/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql/api-bookstore/docker-compose.yml
@@ -4,10 +4,10 @@ services:
   database:
     image: mysql:latest
     environment:
-      - MYSQL_ROOT_PASSWORD: Pl123456
-      - MYSQL_DATABASE: bookstore_db
-      - MYSQL_USER:  clarusway
-      - MYSQL_PASSWORD: Clarusway_1
+      MYSQL_ROOT_PASSWORD: Pl123456
+      MYSQL_DATABASE: bookstore_db
+      MYSQL_USER:  clarusway
+      MYSQL_PASSWORD: Clarusway_1
     networks:
       - bookstorenet
   bookstore-api:
