--- a/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql/api-bookstore/Dockerfile
+++ b/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql/api-bookstore/Dockerfile
@@ -3,4 +3,4 @@ COPY . /api-bookstore
 WORKDIR /api-bookstore
 RUN pip install -r requirements.txt
 EXPOSE 80
-CMD ["python", "./bookstore-api.py"]
+CMD ["python", "bookstore-api.py"]
